feat: basic restful api function completed

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "author": "lugusliu",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.16.3"
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "mysql": "^2.15.0"
   }
 }
