--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mysql": "^2.15.0"
+  },
+  "devDependencies": {
+    "chalk": "^2.4.1"
   }
 }
